# sheetrs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  draft_rules.md  sheetlint.toml
.agent/rules/: architecture.md  scenarios.md  stack.md  test-scenarios.md  verify-scenarios.md
sheetcli/: Cargo.toml  README.md
sheetcli/src/: main.rs
sheetcraft-core/: Cargo.toml
sheetcraft-core/examples/: debug_formulas.rs  dump_formulas.rs  dump_named_ranges.rs  inspect_dependencies.rs  inspect_errors.rs
sheetcraft-core/src/: config.rs  lib.rs  violation.rs
sheetcraft-core/src/reader/: mod.rs  ods_parser.rs  parser_utils.rs  workbook.rs  xlsx_parser.rs  xml_parser.rs
sheetcraft-core/src/rules/: err001_error_cells.rs  err002_broken_named_ranges.rs  err003_circular_references.rs  form001_long_formula.rs  form002_volatile_functions.rs  form003_duplicate_formulas.rs  form004_whole_column_row_refs.rs  form005_empty_string_test.rs  form006_deep_formula_nesting.rs  form007_deep_if_nesting.rs  form008_hardcoded_values_in_formulas.rs  form009_vlookup_hlookup_usage.rs  mod.rs  perf001_unused_named_ranges.rs  perf002_unused_sheets.rs  perf003_large_used_range.rs  perf004_excessive_conditional_formatting.rs  registry.rs  sec001_external_links.rs  sec002_hidden_sheets.rs  sec003_hidden_columns_rows.rs  sec004_has_macros.rs  sec004_macros_vba.rs  sec005_possible_corruption.rs  sm001_excessive_sheet_counts.rs  sm002_duplicate_sheet_names.rs  sm003_long_text_cell.rs  sm004_merged_cells.rs  sm005_non_descriptive_sheet_name.rs  ux001_inconsistent_number_format.rs  ux002_inconsistent_date_format.rs  ux003_blank_rows_columns.rs
sheetcraft-core/src/writer/: mod.rs  xlsx_writer.rs
sheetcraft-core/tests/: writer_tests.rs
sheetlint/: Cargo.toml  README.md
sheetlint/src/: formatter.rs  main.rs
sheetrs/: Cargo.toml
sheetrs/examples/: debug_cells.rs  debug_cf.rs  debug_formulas.rs  dump_formulas.rs  dump_named_ranges.rs  inspect_dependencies.rs  inspect_errors.rs
sheetrs/src/: config.rs  lib.rs  violation.rs
sheetrs/src/reader/: mod.rs  ods_parser.rs  parser_utils.rs  workbook.rs  xlsx_parser.rs
sheetrs/src/rules/: err001_error_cells.rs  err002_broken_named_ranges.rs  err003_circular_references.rs  form001_long_formula.rs  form002_volatile_functions.rs  form003_duplicate_formulas.rs  form004_whole_column_row_refs.rs  form005_empty_string_test.rs  form006_deep_formula_nesting.rs  form007_deep_if_nesting.rs  form008_hardcoded_values_in_formulas.rs  form009_vlookup_hlookup_usage.rs  mod.rs  perf001_unused_named_ranges.rs  perf002_unused_sheets.rs  perf003_large_used_range.rs  perf004_excessive_conditional_formatting.rs  perf005_empty_sheets.rs  registry.rs  sec001_external_links.rs  sec001_external_workbooks.rs  sec002_hidden_sheets.rs  sec003_hidden_columns_rows.rs  sec004_has_macros.rs  sec005_web_urls.rs  sm001_excessive_sheet_counts.rs  sm002_duplicate_sheet_names.rs  sm003_long_text_cell.rs  sm004_merged_cells.rs  sm005_non_descriptive_sheet_name.rs  ux001_inconsistent_number_format.rs  ux002_inconsistent_date_format.rs  ux003_blank_rows_columns.rs
sheetrs/src/writer/: xlsx_writer.rs
sheetrs/tests/: writer_tests.rs
sheetstats/: Cargo.toml  README.md
sheetstats/src/: main.rs
src/: lib.rs  main.rs
tests/: README.md  minimal_test.ods  minimal_test.xlsx
