[package]
name = "xlsutils"
version = "0.1.0"
edition = "2024"
description = "Excel command line tool"
readme = "README.md"
rust-version = "1.87.0"
documentation = "https://github.com/cosmoscalibur/xlsutils"
homepage = "https://github.com/cosmoscalibur/xlsutils"
repository = "https://github.com/cosmoscalibur/xlsutils"
license = "MIT"
keywords = ["excel", "command line"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
quick-xml = "0.37.5"
zip = "4.0.0"
