[workspace]
members = ["sheetrs", "sheetlint", "sheetstats", "sheetcli"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Edward Villegas <cosmoscalibur@gmail.com>"]
license = "MIT"
repository = "https://github.com/cosmoscalibur/sheetrs"


[workspace.dependencies]
# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parallel processing
rayon = "1.10"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Colored output
colored = "2.1"

# XML parsing
quick-xml = "0.37"
zip = "2.2"

# HTTP client for link validation
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.11"
