[package]
name = "sheetcraft-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Excel/ODS linting with hierarchical violation reporting"

[dependencies]
calamine.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
quick-xml.workspace = true
zip.workspace = true
reqwest = { workspace = true, optional = true }
regex.workspace = true

[features]
default = ["link-validation"]
link-validation = ["reqwest"]

[dev-dependencies]
tempfile = "3.13"
