[package]
name = "sheetlint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI interface for SheetLint Excel/ODS linter"

[[bin]]
name = "sheetlint"
path = "src/main.rs"

[dependencies]
sheetcraft-core = { path = "../sheetcraft-core" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
colored.workspace = true
serde_json = "1.0"
